<resources>
    <string name="app_name">Delta Web Map</string>
    <string name="app_name_short">Delta for Ark</string>

    <!-- Startup -->
    <string name="startup_offline_title">Connection Error</string>
    <string name="startup_status_title">Service Unavailable</string>
    <string name="startup_offline_message">Sorry, it appears that you\'re offline. Try again later.</string>
    <string name="startup_offline_retry">Retry</string>

    <!-- Login -->
    <string name="login_title">Welcome!</string>
    <string name="login_sub">To use Delta Web Map, please sign in with Steam. We use Steam to find the servers and tribes that you are part of. By signing in, you agree to the privacy policy.</string>
    <string name="login_privacy_policy">Privacy Policy</string>
    <string name="login_go">Sign In</string>
    <string name="login_return_failed">Sorry, login failed. Please try again.</string>

    <!-- No guilds -->
    <string name="no_guilds_title">No ARK Servers</string>
    <string name="no_guilds_sub">Sorry, you don\'t have any ARK servers registered on your account. To use Delta Web Map, ask your server owner to add Delta Web Map to their server.</string>
    <string name="no_guilds_go">Learn More</string>

    <!-- Out of date -->
    <string name="old_version_title">App Too Old</string>
    <string name="old_version_sub">The app has continually fallen out of date and can no longer connect. Please update the app from the Google Play Store.</string>

    <!-- Service Worker -->
    <string name="sw_failed_status">Server returned an unexpected error.</string>
    <string name="sw_failed_offline">You are offline.</string>

    <!-- Banners -->
    <string name="banner_connecting">Connecting...</string>
    <string name="banner_loading">Downloading map data...</string>
    <string name="banner_offline">This server is offline, data may be out of date</string>

    <!-- Dino dialog -->
    <string name="stat_health">Health</string>
    <string name="stat_stamina">Stamina</string>
    <string name="stat_weight">Weight</string>
    <string name="stat_food">Food</string>
    <string name="dino_more_show_on_map">Show on map</string>
    <string name="error_missing_item_data">No Data</string>
    <string name="dino_img">Dinosaur Icon</string>

    <!-- Notifications -->
    <string name="bg_notif_channel_name">Tribe Notifications</string>
    <string name="bg_notif_channel_description">Shows notifications for tribes you are a member of.</string>

    <!-- Main -->
    <string name="error_server_offline">Sorry, you can\'t do that action because the server is offline. Ask the server owner to start the Delta Web Map service.</string>
</resources>
